--- a/package.json
+++ b/package.json
@@ -53,5 +53,17 @@
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "open": "^7.0.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.0.7.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NguyenYenbg/inlife-blog.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NguyenYenbg/inlife-blog/issues"
+  },
+  "homepage": "https://github.com/NguyenYenbg/inlife-blog#readme"
 }
